test/classes/initializers/phase1/hasLoopBad.good
hasLoopBad.chpl:4: In initializer:
hasLoopBad.chpl:7: error: can't initialize field "highestNum" inside a loop during phase 1 of initialization
